--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
+            <li>Rakibul Islam (Bangladesh), MS student since 3/2025</li>
             <li>Islam Md Mahrab (Bangladesh), MS student since 9/2024</li>
             <li>Minh Phuoc Nguyen (Vietnam), MS student since 9/2024</li>
             <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
