--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Lee D, Jeon Y, Lee Y, <b>Dao NN</b>, Na W, and Cho S, "Energy and density-based stable election routing protocol for wireless IoT network", <i>Journal of Network and Computer Applications</i>. In press. [<a href="https://doi.org">Elsevier</a>]</li>
         <li id="j71"><b>Moges TH</b>, Truong TP, Lakew DS, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Age of information-aware trajectory optimization for time-sensitive UAV systems in uplink SCMA networks", <i>Computer Networks</i>, vol. 268, p. 111369, 2025. [<a href="https://doi.org/10.1016/j.comnet.2025.111369">Elsevier</a>]</li>
         <li>Hoang TM, Pham TA, Nguyen VN, Doan DT, and <b>Dao NN</b>, "Leveraging edge intelligence for solar energy management in smart grids", <i>IEEE Access</i>, vol. 13, pp. 88093-88104, 2025. [<a href="https://doi.org/10.1109/ACCESS.2025.3570595">IEEE</a>]</li>
         <li id="j69"><b>Gardner SH</b>, Hoang TM, Na WS, <b>Dao NN</b>, and Cho S, "Metaverse meets distributed machine learning: A contemporary review on the development with privacy preserving concerns", <i>ICT Express</i>, In press. [<a href="https://doi.org/10.1016/j.icte.2025.04.008">Elsevier</a>]</li>
