--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Tran AT, Truong TP, Won D, <b>Dao NN</b>, and Cho S, "Weighted sum-rate maximization in rate-splitting MISO downlink systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Sa'ad U, Lakew DS, <b>Dao NN</b>, and Cho S, "HERALD: Hybrid ensemble approach for robust anomaly detection in encrypted DNS traffic", <i>Journal of Network and Computer Applications</i>, vol. 244, p. 104342, 2025. [<a href="https://doi.org/10.1016/j.jnca.2025.104342">Elsevier</a>]</li>
         <li>Lee D, Jeon Y, Lee Y, <b>Dao NN</b>, Na W, and Cho S, "Energy and density-based stable election routing protocol for wireless IoT network", <i>Journal of Network and Computer Applications</i>, vol. 242, p. 104237, 2025. [<a href="https://doi.org/10.1016/j.jnca.2025.104237">Elsevier</a>]</li>
         <li id="j71"><b>Moges TH</b>, Truong TP, Lakew DS, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Age of information-aware trajectory optimization for time-sensitive UAV systems in uplink SCMA networks", <i>Computer Networks</i>, vol. 268, p. 111369, 2025. [<a href="https://doi.org/10.1016/j.comnet.2025.111369">Elsevier</a>]</li>
