--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
+            <li>Duc Quyen Mac (Vietnam), MS student since 3/2026</li>
             <li>Caleb Amanuel Wossen (USA), MS student since 9/2025</li>
             <li>Rakibul Islam (Bangladesh), MS student since 3/2025</li>
             <li>Islam Md Mahrab (Bangladesh), MS student since 9/2024</li>
