--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROJECTS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
-            <li>Sustainable beekeeping through drone-assisted beehive management with deep learning and geotagged resources, ISIF Asia (APNIC), 10/2025-03/2027.</li>
+            <!-- <li>Sustainable beekeeping through drone-assisted beehive management with deep learning and geotagged resources, ISIF Asia (APNIC), 10/2025-03/2027.</li> -->
             <li>Development of end-to-end 8 ultra-communication and networking technologies, IITP (Korea), 07/2022-12/2029.</li>
             <li style="list-style-type:disc">Assisting natural beekeeping in rural and remote areas using LoRa-based IoT and drones, ISIF Asia (APNIC), 01/2023-06/2024.</li>
       			<li style="list-style-type:disc">Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, NRF (Korea), 03/2021-02/2024.</li>
